--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,13 +49,24 @@
                         <ul class = "dropdown-menu">
                             <li><a href = '{{ url_for("eventFrames.selectEventFrame") }}'>Event Frames</a></li>
                             <li><a href = '{{ url_for("eventFrameGroups.listEventFrameGroups") }}'>Groups</a></li>
+                            <li><a href = '{{ url_for("eventFramesOverlay.selectEventFrameTemplate") }}'>Overlay</a></li>
                             {% if current_user.isAdministrator() %}
                             <li><a href = '{{ url_for("eventFrameAttributes.exportEventFrameAttributes") }}'>Export</a></li>
                             <li><a href = '{{ url_for("eventFrameAttributes.importEventFrameAttributes") }}'>Import</a></li>
                             {% endif %}
                         </ul>
                     </li>
-                    <li><a href = {{ "" | grafanaUrl() }} target = "_blank">Grafana</a></li>
+                    <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Dashes <span class = "caret"></span></a>
+                        <ul class = "dropdown-menu">
+                            <li><a href = '{{ url_for("dashes.activeEventFramesSummary") }}'>Active Event Frames Summary</a></li>
+                            <li><a href = '{{ url_for("dashes.elementsGraph") }}'>Elements Graph</a></li>
+                            <li><a href = '{{ url_for("dashes.elementsSummary") }}'>Elements Summary</a></li>
+                            <li><a href = '{{ url_for("dashes.eventFrameGraph") }}'>Event Frame Graph</a></li>
+                            <li><a href = '{{ url_for("dashes.eventFrameGroupSummary") }}'>Event Frame Group Summary</a></li>
+                            <li><a href = '{{ url_for("eventFramesOverlay.selectEventFrameTemplate") }}'>Event Frames Overlay</a></li>
+                            <li><a href = '{{ url_for("dashes.tagValuesGraph") }}'>Tag Values Graph</a></li>
+                        </ul>
+                    </li>
                     {% if config["IS_RASPBERRY_PI"] and current_user.isAdministrator() %}
                         <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Raspberry Pi <span class = "caret"></span></a>
                             <ul class = "dropdown-menu">
@@ -129,7 +140,7 @@
 
 {% block scripts %}
     {{ super() }}
-    {{ moment.include_moment() }}
+    {{ moment.include_moment(local_js = url_for("static", filename = "js/moment.min.js")) }}
     <script>
         {% if current_user.is_authenticated %}
             $(function()
