--- a/app/templates/eventFrames/dashboard.html
+++ b/app/templates/eventFrames/dashboard.html
@@ -370,9 +370,9 @@
 
 {% block scripts %}
     {{ super() }}
-    <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/datatables.min.css") }}/> 
-    <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/styles.css") }}/>
-    <script type = "text/javascript" src = {{ url_for("static", filename = "js/datatables.min.js") }}></script>
+    <link rel = "stylesheet" type = "text/css" href = '{{ url_for("static", filename = "css/datatables.min.css") }}' /> 
+    <link rel = "stylesheet" type = "text/css" href = '{{ url_for("static", filename = "css/styles.css") }}' />
+    <script type = "text/javascript" src = '{{ url_for("static", filename = "js/datatables.min.js") }}'></script>
     {% block setTabIndex %}
         <script>
             function setTabIndex()
