--- a/app/templates/eventFramesOverlay/builder.html
+++ b/app/templates/eventFramesOverlay/builder.html
@@ -103,10 +103,10 @@
 
 {% block scripts %}
     {{ super() }}
-    <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/datatables.min.css") }}/> 
-    <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/styles.css") }}/>
-    <script type = "text/javascript" src = {{ url_for("static", filename = "js/datatables.min.js") }}></script>
-    <script type = "text/javascript" src = {{ url_for("static", filename = "js/moment.min.js") }}></script>
+    <link rel = "stylesheet" type = "text/css" href = '{{ url_for("static", filename = "css/datatables.min.css") }}' /> 
+    <link rel = "stylesheet" type = "text/css" href = '{{ url_for("static", filename = "css/styles.css") }}' />
+    <script type = "text/javascript" src = '{{ url_for("static", filename = "js/datatables.min.js") }}'></script>
+    <script type = "text/javascript" src = '{{ url_for("static", filename = "js/moment.min.js") }}'></script>
     {% block setTabIndex %}
         {% if not form %}
             <script>
