--- a/app/templates/lookups/select.html
+++ b/app/templates/lookups/select.html
@@ -96,8 +96,8 @@
 
 {% block scripts %}
     {{ super() }}
-    <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/datatables.min.css") }}/> 
-    <script type = "text/javascript" src = {{ url_for("static", filename = "js/datatables.min.js") }}></script>
+    <link rel = "stylesheet" type = "text/css" href = '{{ url_for("static", filename = "css/datatables.min.css") }}' /> 
+    <script type = "text/javascript" src = '{{ url_for("static", filename = "js/datatables.min.js") }}'></script>
     {% block setTabIndex %}
         {{ super() }}
     {% endblock %}
