--- a/app/templates/eventFrames/select.html
+++ b/app/templates/eventFrames/select.html
@@ -362,6 +362,7 @@
                         <th></th>
                         <th></th>
                         <th></th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -375,6 +376,9 @@
                             <td><a class = "btn btn-default" title = "Configure" href = '{{ url_for("eventFrameTemplateViews.eventFrameAttributeTemplates",
                                 eventFrameTemplateViewId = eventFrameTemplateView.EventFrameTemplateViewId) }}'><span class = "glyphicon glyphicon-wrench">
                                 </span></a></td>
+                            <td><a class = "btn btn-default" title = "Copy" href = '{{ url_for("eventFrameTemplateViews.copy",
+                                fromEventFrameTemplateViewId = eventFrameTemplateView.EventFrameTemplateViewId) }}'>
+                                <span class = "glyphicon glyphicon-copy"></span></a></td>
                             <td><a class = "btn btn-default" title = "Edit" href = '{{ url_for("eventFrameTemplateViews.edit",
                                 eventFrameTemplateViewId = eventFrameTemplateView.EventFrameTemplateViewId) }}'>
                                 <span class = "glyphicon glyphicon-edit"></span></a></td>
@@ -383,6 +387,7 @@
                                 data-type = "event frame template view", data-name = "{{ eventFrameTemplateView.Name }}">
                                 <span class = "glyphicon glyphicon-trash"></span></a></td>
                         {% else %}
+                            <td></td>
                             <td></td>
                             <td></td>
                             <td></td>
