--- a/app/templates/eventFrames/select.html
+++ b/app/templates/eventFrames/select.html
@@ -356,6 +356,7 @@
                 <thead>
                     <tr>
                         <th>Order</th>
+                        <th>EventFrameTemplateViewId</th>
                         <th>Name</th>
                         <th>Description</th>
                         <th>Default</th>
@@ -370,6 +371,7 @@
                     {% for eventFrameTemplateView in parent.EventFrameTemplateViews | sort(attribute = "Order")%}
                     <tr data-eventFrameTemplateViewId = "{{ eventFrameTemplateView.EventFrameTemplateViewId }}">
                         <td >{{ loop.index }}</td>
+                        <td>{{ eventFrameTemplateView.EventFrameTemplateViewId }}</td>
                         <td>{{ eventFrameTemplateView.Name }}</td>
                         <td>{{ eventFrameTemplateView.Description }}</td>
                         <td>{{ eventFrameTemplateView.Default | yesNo }}</td>
@@ -550,7 +552,8 @@
                 columnDefs:
                 [
                     {orderable: true, className: "reorder", targets: 0},
-                    {orderable: false, targets: "_all"}
+                    {orderable: false, targets: "_all"},
+                    {visible: false, targets: 1}
                 ]
             })
 
