--- a/app/templates/dashes/activeEventFramesSummary/activeEventFramesSummary.html
+++ b/app/templates/dashes/activeEventFramesSummary/activeEventFramesSummary.html
@@ -101,6 +101,11 @@
                     "&eventFrameTemplateId=" + {{ eventFrameTemplate.EventFrameTemplateId }} + "&collapseExpand=collapsed"
             {% endif %}
 
+            parameters = parameters + "&activeOnly=" + {{ activeOnly }}
+            {% if months is not none %}
+                parameters = parameters + "&months=" + {{ months }}
+            {% endif %}
+
             $("#iframe").attr("src", '{{ url_for("/activeEventFramesSummaryDash/") }}' + "?localTimezone=" + moment.tz.guess(true) + parameters)
             setTabIndex()
             $('ol.breadcrumb a[title="Next"]').focus()
